Sincronização com repositório original

--- a/compose.yaml
+++ b/compose.yaml
@@ -64,6 +64,7 @@ services:
       - mongo-express
     volumes:
       - ./api/grupo-2:/app
+      - ./api/grupo-2/uploads:/app/uploads
     environment:
       - MONGODB_URL=${MONGODB_URL:-mongodb://root:senha@mongo:27017/}
 
