--- a/api/grupo-2/Dockerfile
+++ b/api/grupo-2/Dockerfile
@@ -15,6 +15,7 @@ USER node
 
 #Instalar as dependências do projeto
 RUN npm install
+RUN npm install multer
 
 #Copiar os arquivos do projeto para dentro do container
 COPY --chown=node:node . .
